  of tags.
- New optional constant ~yet-org-noob~.
- =org-mode-map= keybinding =C-c o l= to call =org-store-link=.
- Function to unfill elements ~M-x yet-org-unfill~ (=C-M-q=).
- Function ~M-x yet-org-export-output-file-name-toggle~ (=C-c o e=).
- Enable =undelete-frame-mode= that provides function ~M-x undelete-frame~.
- Enable =winner-mode= that records changes in window configuration.

*** Changed
- Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
- Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.
- Disable confusing =org-mode= keybindings only if ~yet-org-noob~ is enabled.
- Set user option =org-export-headline-levels= value to 5.
- Disable =org-html-validation-link=.
- =dired-mode= keybinding =n= now calls ~yet-dired-display-next~.
- =dired-mode= keybinding =p= now calls ~yet-dired-display-previous~.
- =rust-mode= ~yet-rustup-doc~ now bound to =C-c o d= (was =C-c C-h=).
- =php-mode= ~php-search-documentation~ bound to =C-c o d= (was =C-c C-h=).
- Customize windows for buffers display with ~display-buffer-alist~.
- Display =Ediff= control panel in the same frame.

*** Removed
- Package =org-preview-html= in favor of =C-c C-e h o= (~org-export-dispatch~).
- Disable =eglot-report-progress= to reduce clutter in the echo area.

** v2.2.0 - 2023-08-05

This release wraps up further improvements made for *Emacs 28.2*. Future commits
are planned to be *Emacs 29* -oriented (ideally, preserving backward
compatibility).

The main highlights of this release are as follows:
- Better keybindings for =rust-mode=, =php-mode=, =eglot=.
- Local configuration (~yet-~ constants related) improvements.
- =web-mode= usability improvements.
- New packages: =fish-mode=, =imenu-list=.

*** Added
- =rust-mode= abbreviations (templates). See ~M-x list-abbrevs~.
- =rust-mode-map= keybindings:
  - =C-c C-l= for ~M-x rust-run-clippy~.
  - =C-c C-h= for ~M-x yet-rustup-doc~.
  - =C-c t m= for ~M-x rust-toggle-mutability~.