@@ -19,6 +19,7 @@ Includes usability adjustments.
 - Function ~M-x yet-org-export-output-file-name-toggle~ (=C-c o e=).
 - Enable =undelete-frame-mode= that provides function ~M-x undelete-frame~.
 - Enable =winner-mode= that records changes in window configuration.
+- Package =gptel=: a Large Language Model (e.g., ChatGPT) chat client.
 
 *** Changed
 - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
